--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -1043,7 +1043,8 @@ Das Potenzverfahren kann jedoch in einer Art formuliert werden, dass
 es mittels Iteration alle Eigenwerte und Eigenvektoren einer beliebigen
 Matrix bestimmen kann, selbst wenn die Eigenvektoren komplex sind.
 Dieses erweiterte Potenzverfahren heisst Francis Verfahren, es
-\index{Algorithmus!Algorithmus}
+\index{Algorithmus!Franis}
+\index{Francis, John}
 wurde von John Francis 1961 entwickelt.
 Eine gute Beschreibung findet man auch im Buch von Watkins
 \cite[Chapter 5]{skript:watkins}.
