--- a/skript/green/green.tex
+++ b/skript/green/green.tex
@@ -1,4 +1,4 @@
-\chapter{Visualisierung der Greenschen Funktion}
+\chapter{Visualisierung der Greenschen Funktion\label{chapter:green}}
 \rhead{Visualisierung der Greenschen Funktion}
 \begin{refsection}
 \chapterauthor{Andreas Linggi, Stefan Steiner}
@@ -27,7 +27,7 @@ anliegt, ist es von Interesse zu wissen, welches Potential man nun
 an einem beliebigen Punkt auf der Platte misst.
 
 \section{George Green}
-
+\index{Green, George}
 Der Namensgeber f"ur die Greensche Funktion ist George Green. Er
 war ein britischer Physiker und Mathematiker. Geboren wurde er 1793
 in der N"ahe von Nottingham. Sein Vater betrieb eine M"uhle und
@@ -78,7 +78,8 @@ liefert uns ein Programm, bei welchem wir Daten einspeisen und im
 Gegenzug bearbeitet erhalten.
 	
 Das Problem, welches wir hier l"osen, wurde ebenfalls von Philip
-Solenthaler und Reto Christen bearbeitet. Sie haben untersucht, wie
+Solenthaler und Reto Christen in Kapitel~\ref{chapter:potential}
+bearbeitet. Sie haben untersucht, wie
 ein Programm geschrieben werden kann, welches dieses Problem
 m"oglichst effizient l"ost.
 
@@ -307,6 +308,7 @@ automatisch mit dem vorgegebenen Einstellungen erstellt.
 		
 fmt: standard input: Illegal byte sequence
 Gnuplot ist ein Kommandozeilen basiertes OpenSource Tool, das aber
+\index{GNUPlot}
 auch mit GUI erh"altlich ist.
 		
 \lstinputlisting{green/gnuplot.c}
@@ -325,6 +327,7 @@ Wir haben jeweils zwei verschiedene Ansichten erstellt: Eine normal
 Ansicht, d.h ein 3D-Plot wie er z.~B.~in \ref{fig:201_1} zusehen
 ist und eine Ansicht von oben mit H"ohenlinien. Aus den Bilddateien
 wird am Schluss optional noch ein Video erstellt.
+\index{Video}
 		
 \section{Probleme}
 
