--- a/skript/maschinen.tex
+++ b/skript/maschinen.tex
@@ -163,7 +163,7 @@ Aus den Illusionen lassen sich ein paar Faustregeln ableiten, wie man
 Code formulieren kann, so dass er der Realit"at besser Rechnung tr"agt.
 
 \subsection{Datenlokalit"at}
-\index{Datenlokalit"at}
+\index{Datenlokalitat@Datenlokalit\"at}
 Die Daten im Speicher sollen so angeordnet werden, dass die Zugriff w"ahrend
 der Rechnung m"oglichst lange einen m"oglichst kleinen Adressbereich umfassen,
 so dass Die Arbeit im Cache erfolgen kann.
