--- a/skript/radon/sections/Einleitung.tex
+++ b/skript/radon/sections/Einleitung.tex
@@ -3,8 +3,11 @@
 Die Radonr"uckprojektion oder auch Radonr"ucktransformation ist
 die Umkehrung der Radontransformation die 1917 vom "ostreichischen
 Mathematiker Johann Radon ver"offentlicht wurde. Eine der bekanntesten
+\index{Radon!Johann}
 Anwendung der Radonr"uckprojektion ist die Computertomographie. Bei einem
+\index{Computertomographie}
 Computertomographen werden R"ontgenstrahlen von einer kreisf"ormigen
+\index{Rontgenstrahlen@R\"ontgenstrahlen}
 Bahn durch einen in der Mitte befindlichen K"orper geschickt und auf
 der gegen"uberliegenden Seite ausgewertet. Durch Rotation wird so jeder
 Punkt aus einer Scheibe des K"orpers erfasst. Die dadurch anfallenden
