--- a/skript/radon/sections/Erweiterung.tex
+++ b/skript/radon/sections/Erweiterung.tex
@@ -17,6 +17,7 @@ Radontransformation(b)).
 
 Durch unsere R"ucktransformation k"onnen wir jetzt daraus wieder das
 Orginalbild herstellen (hier R"uckprojektion(c). Das Orginalbild l"asst
+\index{Ruckprojektion!R\"uckprojektion}
 sich zwar deutlich erkennen, es hat aber viele helle Schatten, welche
 durch Randeffekte der R"ucktransformation entstehen. Diese Stellen werden
 Schatten genannt. Das Problem ist, dass sich die Cosinuskuven, welche
@@ -55,6 +56,7 @@ einzelnen Linien des Barcodes. Die Barcodescanner auf Smartphones
 verwenden beispielsweise genau diese Beziehung.
 
 Um die Visualisierung zu vereinfachen, haben wir das Bild des Barcodes(g)
+\index{Barcode}
 farblich invertiert, dies ist jedoch nicht unbedingt notwendig. in der
 Radontransformation(h) kann man nun eine horizontale Reihe von hellen
 Punkten erkennen, welche von rechts nach links gelesen dem Barcode(g)
