--- a/skript/radon/sections/Rueckprojektion.tex
+++ b/skript/radon/sections/Rueckprojektion.tex
@@ -1,5 +1,6 @@
 \section{Radontransformation und R"uckprojektion}
-
+\index{Radontransformation}
+\index{Radon!Transformation}
 Durch eine Funktion $f(x,y)$, welche die Absorbtion der R"ontgenstrahlen
 in einem bestimmten Punkt im K"orper darstellt, erhalten wir die gesuchte
 Dichte des K"orpers in diesem Punkt, da die Absorbtion direckt von der
@@ -9,6 +10,7 @@ den K"orper zu messen. Die Absorbtion entlang des geradlinigen Strahles
 entspricht der Radontransformation $Rf(r,\vartheta)$ bei einem bestimmten
 Winkel.
 Der CAT-Scanner schiesst R"ontgenstrahlen aus allen Richtungen durch
+\index{CAT-Scanner}
 den K"orper und rechnet dann grundlegend die Linien-Integrale "uber
 jede einzelne Gerade aus. Die anfallenden Daten entsprechen der
 Radontransformation $g(r,\vartheta) = Rf(r,\vartheta)$. 
