index entry: Richardson

--- a/skript/anwendungen.tex
+++ b/skript/anwendungen.tex
@@ -68,10 +68,12 @@ Str"omungsgleichungen, l"asst sich aus deren L"osung viel "uber "ahnliche
 Modelle zum Beispiel in der numerischen Wetterprognose lernen.
 
 Damit schliesst sich der Kreis der Awendungen. Lewis Fry Richardson hat
+\index{Richardson, Lewis Fry}
 sich vor ziemlich genau hundert Jahren eine Methode zur Berechnung der
 Wetterentwicklung ausgedacht \cite{skript:richardson}.
 Zu deren Durchf"uhrung stellte er sich
 eine {\em Forecast Fatory} vor (Abbildung~\ref{forecastfactory}),
+\index{Forecast Factory}
 ein riesiges, theaterartiges Geb"aude,
 wo viele Computer, also Arbeiter mit mechanischen Rechenmaschinen, an der
 Berechnung der Atmosph"arenentwicklung f"ur jeweils ein Teilgebiet
