--- a/skript/heat/heat.tex
+++ b/skript/heat/heat.tex
@@ -616,7 +616,7 @@ Overhead verursachte Streuung dominiert die Laufzeit.
 
 \subsection{Visualisierung der Resultate}
 Die Funktion $u(x,y)$ kann als Bild visualisiert werden.
-Das Beispielprogramm hat daher Kommandozeilen-Optionen, mit welchen man
+Das Beispielprogramm hat daher Kommando\-zeilen-Optionen, mit welchen man
 verlangen kann, dass $u(x,y)$ f"ur jeden Zeitpunkt als FITS-Bild
 gespeichert werden. Diese Bilder kann man dann in JPEG-Bilder konvertierung
 und in MPEG-Video codieren.
